- Fixed the player and map lists in the GUI not updating.
- Fixed color code exploits which crash clients.
- Fixed GUI so if a box is left empty in the create level (not including seed) it no longer crashes.
- Fixed newly "opped" (can break adminium) players having to rejoin before they can actually break adminium.
- Fixed dirt changing into grass when it shouldn't on physics 0.
- Added global chat, which allows you to chat with other servers! Can be disabled in the properties.
- Added /copy [save|load|delete|list], and you can load from a URL by appending a # to the end.
- Added Plugin.Events.CancelEvent().
- Added tree growing! Use /map growtrees to turn it on, place a sapling and wait a while.
- Added leaf decay! Use /map leafdecay to turn it on, requires physics.
- Added missing stuff to the "Maps" tab.
- Added seed option to /newlvl, check /help newlvl for more information.
- Added a "Games" tab to the properties window, it's for game mode configuration.
- Added server port and NickServ identify to the IRC/SQL settings tab.
- Added an easter egg. See if you can find it!
- Added global chat!
- Added commands:
	- /global or /gc - Send a message to global chat.
	- /garbage - Runs the .NET garbage collector, which frees up memory. You shouldn't need to use this often.
- Added blocks:
	- griefer_stone - Kicks you when broken! Use sparingly... or all the time. Defaults to Op+ to place.
	- lava_sponge - Like normal sponge, but cleans up lava instead of water. Defaults to AdvBuilder+ to place/destroy.
	- op_lava - Self explanatory.
- Removed the duplicate "death count" option.
- Moved Zombie Survival options into the "Games" tab.
- Made it so in the CLI, you must now use a / before commands. No more chat messages being parsed as commands!
- Made it so autoload.txt doesn't save when load on /goto is enabled.
- Made some changes to the right-click menu for the maps box.
- Made a change to the window title, it looks much more professional.