@@ -15,20 +15,25 @@ v5.2.0.0
 - Fixed GUI so if a box is left empty in the create level (not including seed) it no longer crashes.
 - Fixed newly "opped" (can break adminium) players having to rejoin before they can actually break adminium.
 - Fixed dirt changing into grass when it shouldn't on physics 0.
+- Fixed the "To many connections!" error that would require a restart.
+- Fixed various bugs in Zombie Survival.
 - Added global chat, which allows you to chat with other servers! Can be disabled in the properties.
 - Added /copy [save|load|delete|list], and you can load from a URL by appending a # to the end.
+- Added a per-rank undo limit and ditched the old hard-coded limits. It's in seconds, set to 0 for no limit.
 - Added Plugin.Events.CancelEvent().
 - Added tree growing! Use /map growtrees to turn it on, place a sapling and wait a while.
 - Added leaf decay! Use /map leafdecay to turn it on, requires physics.
 - Added missing stuff to the "Maps" tab.
 - Added seed option to /newlvl, check /help newlvl for more information.
 - Added a "Games" tab to the properties window, it's for game mode configuration.
+- Added Lava Survival mode! Yay! The GUI is in the properties.
 - Added server port and NickServ identify to the IRC/SQL settings tab.
 - Added an easter egg. See if you can find it!
 - Added global chat!
 - Added commands:
 	- /global or /gc - Send a message to global chat.
 	- /garbage - Runs the .NET garbage collector, which frees up memory. You shouldn't need to use this often.
+	- /lavasurvival or /ls - Setup and use Lava Survival.
 - Added blocks:
 	- griefer_stone - Kicks you when broken! Use sparingly... or all the time. Defaults to Op+ to place.
 	- lava_sponge - Like normal sponge, but cleans up lava instead of water. Defaults to AdvBuilder+ to place/destroy.
@@ -43,7 +48,7 @@ v5.2.0.0
 - Made it so plugins are loaded last, this fixes a problem with accessing levels in plugins.
 - Made changes to some events (Might break old plugins).
 - Made it so /players now has an option to not show ranks that have no one ranked as them online, and you can see only players of a certain rank with /players [rank].
-- Made it so /line now has the shortcut of /l. 
+- Made it so /line now has the shortcut of /l.
 - Improved the tree generator, the trunk now makes more sense.
 - Improved water/lava physics, they now have random flow. You can go back to the old physics with /map randomflow.
 
